# opencv-ams

./: .gitignore  CMakeLists.txt  README.md  optical_flow_dense.py  polar2cartesian.py  videoFrameAvgDiff.py
CLAHE/: CLAHE.cpp  CMakeLists.txt
HOG_descriptor/: CMakeLists.txt  HOG_descriptor.cpp
HOG_sobel/: CMakeLists.txt  HOGsobel.cpp
RANSAC/: CMakeLists.txt  RANSAC.cpp  _modelest.h
SURF_FlannMatcher/: CMakeLists.txt  RANSAC.cpp  RANSAC.hpp  SURF_FlannMatcher.cpp
SURF_descriptor/: CMakeLists.txt
adaptive_thresh/: adaptive_thresh.cpp
back_project_patch/: CMakeLists.txt
bagofwords_classification/: CMakeLists.txt
blob_detector/: CMakeLists.txt  SimpleBlobDetector_demo.cpp
camera_calibration/: README.md  camera_calibration.cpp  images_GTRI.xml  images_blender.xml  images_endo.xml  images_endoApril.xml  images_endoTank.xml  images_goproBritneyAir.xml  images_icefindwnair.xml  images_icefinfwdair.xml  images_vray.xml  images_vrayfwdair.xml  images_vrayfwdairundist.xml  images_vraytank0deg.xml  images_vraytank0deglinux.xml  images_vraytank17deg.xml  images_vraytank17deglinux.xml  images_vraytank30deg.xml  images_vraytank30deglinux.xml  images_vraytank68deg.xml  images_vraytank68deglinux.xml  images_vrayupair.xml  images_vrayupair30deg.xml  in_GTRI.xml  in_blender.xml  in_endo.xml  in_endoApril.xml  in_endoTank.xml  in_goproBritneyAir.xml  in_icefindwnair.xml  in_icefinfwdair.xml  in_vray.xml  in_vrayfwdair.xml  in_vrayfwdairundist.xml  in_vraytank0deg.xml  in_vraytank0deglinux.xml  in_vraytank17deg.xml  in_vraytank17deglinux.xml  in_vraytank30deg.xml  in_vraytank30deglinux.xml  (+24 more)
canny_edges/: CMakeLists.txt
compassdepth_csv/: CMakeLists.txt  compassdepth.cpp
connected_components/: CMakeLists.txt  connected_components.cpp
contours/: CMakeLists.txt  contours2.cpp
cut_video/: CMakeLists.txt  cut_video.cpp
dft/: CMakeLists.txt  discrete_fourier_transform.cpp
erode_dilate/: CMakeLists.txt  Morphology_1.cpp
feature_detectors/: CMakeLists.txt  feature_detectors.cpp
feature_match/: CMakeLists.txt  SURF_FLANN_matching_Demo.cpp  SURF_detection_Demo.cpp
filtering_all/: CMakeLists.txt  filtering_all.cpp
frame_grabber/: frame_grabber.py
get_frame/: CMakeLists.txt  opencv.cpp
good_features_track/: CMakeLists.txt  goodFeaturesToTrack.cpp
gradient_laplace/: CMakeLists.txt
gradients/: CMakeLists.txt  Sobel_Demo.cpp
hist_compare/: CMakeLists.txt
histogram_hsv/: CMakeLists.txt  calcHist_Demo.cpp  runall.sh  runallreal.sh
hough_lines/: CMakeLists.txt  hough_lines.cpp
hsv_split/: CMakeLists.txt  hsv_split.cpp
hueColorSpectrum/: hsv_split.cpp
imagelist_creator/: CMakeLists.txt
oculus_sonar_pointcloud/: CMakeLists.txt  oculus_sonar_pointcloud.cpp
oculus_sonar_template/: CMakeLists.txt  oculus_sonar_template.cpp
opencv-text-recognition/: text_recognition.py
playbackVideoOnly/: CMakeLists.txt  opencv.cpp
recoverPose/: RANSAC.cpp  (+7 more)
(+373 files in other folders)
